versioned_docs/version-2026.1.1/professor/simone_de_miranda.mdx


---
sidebar_label: 'Simone de Miranda'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Simone de Miranda",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Artes II - 614",
          "size": 2,
          "teachers": [
            "Simone de Miranda"
          ],
          "classroom": "espaco_de_artes",
          "students": [
            "AGO2025"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Artes 2 - 166",
          "size": 1,
          "teachers": [
            "Simone de Miranda"
          ],
          "classroom": "espaco_de_artes",
          "students": [
            "EIN2025"
          ],
          "time": "08:20 - 09:10",
          "color": ""
        },
        {
          "subject": "Artes 3 - 221",
          "size": 1,
          "teachers": [
            "Simone de Miranda"
          ],
          "classroom": "espaco_de_artes",
          "students": [
            "EIN2023"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Artes I - 458",
          "size": 2,
          "teachers": [
            "Simone de Miranda"
          ],
          "classroom": "espaco_de_artes",
          "students": [
            "AGO2026A"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Artes I - 458",
          "size": 2,
          "teachers": [
            "Simone de Miranda"
          ],
          "classroom": "espaco_de_artes",
          "students": [
            "AGO2026B"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Arte - 2452",
          "size": 2,
          "teachers": [
            "Simone de Miranda"
          ],
          "classroom": "espaco_de_artes",
          "students": [
            "COM2024"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Simone de Miranda

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

